# HireSense

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  readme.md
backend/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tracked_applications.py  002_create_stories.py  003_create_company_research.py  004_create_profiles.py  005_create_application_artifacts.py  006_create_application_cover_letters.py  007_add_profile_manual_fields.py  007_create_admin_llm_tables.py  008_create_cover_letter_templates.py  008_create_ingested_jobs.py  009_add_profile_links.py  010_create_cover_letter_templates.py  011_widen_ingested_jobs_columns.py  012_add_ingested_jobs_remote_modality.py  013_create_job_match_cache.py  014_create_vector_embeddings.py  015_add_job_lifecycle_columns.py  016_create_preference_tables.py  017_create_application_status_history.py  018_create_digests.py  019_create_outreach_events.py  020_add_preference_weight_overrides.py  021_add_feedback_signal_dimension_scores.py  022_widen_profile_url_columns.py  023_ensure_vector_embeddings.py  024_add_job_quality.py  025_add_vector_embeddings_bucket_index.py  026_add_portfolio_projects.py  027_add_network_contacts.py  028_outreach_events_application_created_index.py  029_add_portfolio_projects_include_in_matching.py  030_add_ingested_jobs_application_method.py  031_add_profiles_apply_profile.py  032_add_profile_machine_translated.py  033_add_scheduler_tables.py  034_add_inbox_detected_signals.py  035_add_autopilot_drafts.py  036_add_ingested_jobs_expiry_date.py  037_add_company_research_firmographics.py  038_unique_autopilot_drafts_job_id.py  (+4 more)
backend/cvs/originals/: 1accd494-7556-434d-976b-8ce4bbdcd839_cv_backend_english_2026.tex  be48a107-1730-4a76-8f07-97b741fcbab4_cv_backend_spanish_2026.tex
backend/scripts/: backfill_embeddings.py  backfill_job_quality.py  refetch_getonboard.py
backend/src/hiresense/: _cli.py  config.py  main.py
backend/src/hiresense/adapters/: __init__.py  smtp_email_sender.py
backend/src/hiresense/admin/: __init__.py
backend/src/hiresense/analytics/: __init__.py
backend/src/hiresense/bootstrap/: __init__.py  admin.py  analytics.py  applications.py  autohunt.py  autopilot.py  claims.py  cover_letter_templates.py  dimension_scorer_adapter.py  identity.py  inbox.py  ingestion.py  interview.py  matching.py  network.py  notifications.py  optimization.py  outreach.py  portfolio.py  preference.py  profile.py  research.py  scheduler.py  shared_infra.py  tracked_factory.py  tracking.py
backend/src/hiresense/claims/: __init__.py
backend/src/hiresense/config/: __init__.py  mode.py  settings.py  sources.py
backend/src/hiresense/cover_letter_templates/: __init__.py
backend/src/hiresense/identity/: __init__.py  services.py
backend/src/hiresense/infrastructure/: __init__.py  database.py  json_type.py  registry.py  sql_repository.py
backend/src/hiresense/kernel/: __init__.py  email_message.py  exception_handlers.py  lru_cache.py  pagination.py  prompt_boundary.py  prompt_boundary_label.py  rate_limit.py  security_headers.py  skill_aliases.py  skill_normalization.py
backend/src/hiresense/network/: __init__.py
backend/src/hiresense/observability/: __init__.py  exporters.py  instrumentation.py  json_formatter.py  logging_config.py  meter.py  metrics.py  request_id_ctx.py  resource.py  setup.py  trace_context_filter.py  tracer.py
backend/src/hiresense/portfolio/: __init__.py
backend/src/hiresense/ports/: __init__.py  email_sender.py  email_unavailable_error.py  embedding.py  event_bus.py  latex_compiler_port.py  llm.py  vector_store.py
backend/tests/integration/: conftest.py  test_analytics_endpoints.py  test_autohunt_endpoints.py  test_autohunt_repository.py  test_autopilot_app_wiring.py  test_autopilot_concurrency.py  test_autopilot_endpoints.py  test_autopilot_repository.py  test_cookie_auth.py  test_corpus_repository.py  test_identity_admin_role.py  test_inbox_app_wiring.py  test_inbox_endpoints.py  test_inbox_repository.py  test_ingestion_to_api_flow.py  test_jobs_company_filter.py  test_jobs_list_since.py  test_llm_usage_log_repository.py  test_login_rate_limit.py  test_notifications_app_wiring.py  test_notifications_endpoints.py  test_outreach_endpoints.py  test_outreach_repository.py  test_pgvector_ann.py  test_preference_bootstrap_subscription.py  test_preference_flow.py  test_preference_implicit_flow.py  test_preference_weight_nudge_flow.py  test_research_endpoints.py  test_scheduler_app_wiring.py  test_scheduler_endpoints.py  test_scheduler_repository.py  test_status_history.py  test_telemetry_request.py
backend/tests/unit/: test_app.py  test_config.py  test_embedding_port.py  test_event_bus.py  test_langchain_adapter.py  test_latex_compiler.py  test_llm_adapters.py  test_lru_cache.py  test_orm_registry.py  test_pgvector_adapter.py  test_rate_limit.py  test_retrying_async_client.py  test_sentence_transformer_adapter.py  test_settings_autopilot.py  test_settings_inbox.py  test_settings_notifications.py  test_settings_retention.py  test_settings_scheduler.py  test_shared_email_primitives.py
backend/tests/unit/admin/: test_encryption.py  test_feature_configured_llm_adapter.py  test_feature_registry.py  (+9 more)
(+1450 files in other folders)
