[project]
name = "hiresense"
version = "0.1.0"
description = "AI-powered job matching and CV optimization system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.5",
    "alembic>=1.18.5",
    "httpx>=0.27.0",
    "apscheduler>=3.11.3",
    "python-multipart>=0.0.32",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "langgraph>=1.2.7",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=1.4.8",
    "sentence-transformers>=5.6.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.15.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.12",
    "pymupdf>=1.28.0",
    "cryptography>=49.0.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
]

[project.optional-dependencies]
groq = ["langchain-groq>=1.1.3"]
ollama = ["langchain-ollama>=1.1.0"]

[project.scripts]
app = "hiresense._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hiresense"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "pgvector: requires a live Postgres+pgvector DB (docker compose up db); skipped unless explicitly selected",
]

[tool.ruff]
target-version = "py312"
line-length = 100

# Single source of truth for dev tooling (uv dependency-groups). The old
# [project.optional-dependencies].dev block was removed — it pinned conflicting
# older versions of pytest/pytest-asyncio (#19).
[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.20",
]
